[package]
authors = ["Nathaniel Ringo <remexre@gmail.com>"]
description = "A pretty logger similar to pretty_env_logger, but configured from the init function instead of from an environment variable."
documentation = "https://docs.rs/pretty_logger"
homepage = "https://github.com/remexre/pretty_logger"
license = "MIT/Apache-2.0"
name = "pretty_logger"
repository = "https://github.com/remexre/pretty_logger"
version = "0.2.0"

[dependencies]
ansi_term = "0.10.0"
isatty = "0.1.6"
log = { version = "0.4.1", features = ["std"] }
unicode-segmentation = "1.2.0"
